--- a/style.scss
+++ b/style.scss
@@ -916,4 +916,7 @@ a{color:inherit}
 .c-box{width:100%; height: 100%; margin:0 auto; position:relative;
 	@include device(xlg){width:75%}
 }
-#map{height: 100%;}
+.labels{padding:5px 10px;background:rgba(0,0,0,0.8);color:#FFF;border-radius:3px;height:auto;pointer-events: none;white-space: nowrap;valign:middle;}
+.labels h4{font-size:14px;color:#FFF !important;transition-delay: 0.0s !important;line-height: normal !important;transition-duration: 0.0s !important;}
+.labels span{display: inline-block;margin-top: 5px;}
+#map{height: 100%}
