--- a/_animate.scss
+++ b/_animate.scss
@@ -1,5 +1,84 @@
 @charset "UTF-8";
 
+@mixin spinner{
+  -webkit-animation: spinner 0.9s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+  -moz-animation: spinner 0.9s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+  animation: spinner 0.9s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+@-webkit-keyframes spinner {
+  0% {
+    height: 0;
+    width: 0;
+    background-color: #FE665C;
+  }
+  29% {
+    background-color: #FE665C;
+  }
+  30% {
+    height: 2em;
+    width: 2em;
+    background-color: transparent;
+    border-width: 1em;
+    opacity: 1;
+  }
+  100% {
+    height: 2em;
+    width: 2em;
+    border-width: 0;
+    opacity: 0;
+    background-color: transparent;
+  }
+}
+@-moz-keyframes spinner {
+  0% {
+    height: 0;
+    width: 0;
+    background-color: #FE665C;
+  }
+  29% {
+    background-color: #FE665C;
+  }
+  30% {
+    height: 2em;
+    width: 2em;
+    background-color: transparent;
+    border-width: 1em;
+    opacity: 1;
+  }
+  100% {
+    height: 2em;
+    width: 2em;
+    border-width: 0;
+    opacity: 0;
+    background-color: transparent;
+  }
+}
+@keyframes spinner {
+  0% {
+    height: 0;
+    width: 0;
+    background-color: #FE665C;
+  }
+  29% {
+    background-color: #FE665C;
+  }
+  30% {
+    height: 2em;
+    width: 2em;
+    background-color: transparent;
+    border-width: 1em;
+    opacity: 1;
+  }
+  100% {
+    height: 2em;
+    width: 2em;
+    border-width: 0;
+    opacity: 0;
+    background-color: transparent;
+  }
+}
+
 $animation__startDelay: 0s !default;
 $animation__delayOffset: 0.2s !default;
 
