--- a/style.scss
+++ b/style.scss
@@ -717,7 +717,7 @@ a{color:inherit}
 	}
 }
 %c-tint{background-color: #f4f4ff;
-	.is-pc{background-color: #f7f7f7;}
+	.is-pc &{background-color: #f7f7f7}
 }
 .c-tint{position: absolute; top:0; left: percentage(1/6); width: percentage(5/6); z-index:0; height: 100%; @include prefix((transform-origin:0% 50%)); @extend %c-tint;
 	.boot &{@include scaleInLeft; @include anim}
