--- a/style.scss
+++ b/style.scss
@@ -629,8 +629,8 @@ a{color:inherit}
 }
 .c-story{color: #575b64;
 	p{margin-bottom: 2.5em; padding: 0 0.625em; font-size:0.95em; line-height:1.85;
-		a{color:#4463b7; 
-			&:hover{text-transform:underline;}
+		a{color:#263f81; text-decoration: underline; 
+			&:hover{text-transform:none; opacity:0.6}
 		}
 		&.s--reset{padding:0; margin: 0}
 	}
@@ -649,6 +649,7 @@ a{color:inherit}
 	img{max-width:100%; height:auto; padding:1.5em 0}
 	.o-list{padding:2em}
 	iframe{width:100%; height: 400px; border:0; margin:2em 0}
+	.wp-caption-text {font-family: 'Georgia'; font-style: italic; padding: 0 2em;}
 }
 .c-logo{width:6em;height:5em; position: absolute; left:1.5em; top:1.5em; overflow:hidden; @include prefix((transition: transform 0.5s $sharpIn), webkit moz o); z-index:3;
 	a{display: block; height: 100%; @include image('asigma-logo.svg'); background-repeat:no-repeat; background-size:contain; 
