--- a/style.scss
+++ b/style.scss
@@ -646,7 +646,9 @@ a{color:inherit}
 		p{font-family:'Georgia'; font-style:italic; font-size:1.3em; color: $blue}
 		&:after{content:""; position: absolute; bottom:25%; width: 3%; height: 1px; background-color: $blue; left: 7%}
 	}
-	img{max-width:100%; height:auto; padding:1.5em 0}
+	img{max-width:100%; height:auto; padding:1.5em 0;
+		&.size-full{width:100%;}
+	}
 	.o-list{padding:2em}
 	iframe{width:100%; height: 400px; border:0; margin:2em 0}
 	.wp-caption-text {font-family: 'Georgia'; font-style: italic; padding: 0 2em;}
