--- a/style.scss
+++ b/style.scss
@@ -103,7 +103,7 @@ $sharpIn: cubic-bezier(0.03, 0.45, 0.25, 1);
 	.boot &{@include delay(1.2); @include anim; @include fadeInUp}
 }
 .u-ying__header{margin-bottom: 2em; margin-top: 6em;
-	.o-subtitle{margin:0.5em 0 2.5em; color: #fff}
+	.o-subtitle{margin:0.5em 0 2.5em; color: #fff;}
 	.boot &{@include delay(1); @include anim; @include fadeInUp}
 	@include device(xs){margin-top:0}
 }
@@ -361,7 +361,9 @@ a{color:inherit}
 	}
 }
 .o-content{margin-left: percentage(2/6); width: percentage(3/6); padding-top: 15em; position: relative; z-index:12;
-	&.s--project{margin-left:percentage(1/6); width: percentage(4/6)}
+	&.s--project{margin-left:percentage(1/6); width: percentage(4/6);
+		h4{font-size:0.875em}
+	}
 	.o-menu{margin:2em 0}
 	&.s--story{background-color: #fff}
 	@include device(sm){width:auto;
@@ -504,7 +506,7 @@ a{color:inherit}
 		p{background-color: transparent !important}
 	}
 }
-.o-subtitle{font-family: $roboto; color: $grey-copy; text-transform: uppercase; font-size: 0.7em; display: block;
+.o-subtitle{font-family: $roboto; color: $grey-copy; text-transform: uppercase; font-size: 0.7em; display: block; line-height: 1.3;
 	.t-dark &{color: white}
 	.c-next &{margin-bottom: 2em}
 }
@@ -633,6 +635,7 @@ a{color:inherit}
 			&:hover{text-transform:none; opacity:0.6}
 		}
 		&.s--reset{padding:0; margin: 0}
+		@include device(xs){font-size: 1em}
 	}
 	.boot &{@include anim; @include fadeIn; @include delay(1.5)}
 	h1{color: $blue; padding:0.3em 0.3em 1em}
@@ -651,7 +654,9 @@ a{color:inherit}
 	}
 	.o-list{padding:2em}
 	iframe{width:100%; height: 400px; border:0; margin:2em 0}
-	.wp-caption-text {font-family: 'Georgia'; font-style: italic; padding: 0 2em;}
+	.wp-caption-text {font-family: 'Georgia'; font-style: italic; padding: 0 2em;
+		@include device(xs){font-size:0.875em}
+	}
 }
 .c-logo{width:6em;height:5em; position: absolute; left:1.5em; top:1.5em; overflow:hidden; @include prefix((transition: transform 0.5s $sharpIn), webkit moz o); z-index:3;
 	a{display: block; height: 100%; @include image('asigma-logo.svg'); background-repeat:no-repeat; background-size:contain; 
@@ -670,6 +675,7 @@ a{color:inherit}
 	@include device(xs){width: 3em; height: 3em; position: static; margin-bottom:1.5em; padding-left:0.625em;
 		a{@include image('asigma-logo-mark.svg'); 
 			.t-dark &, .is-open &{@include image('asigma-logo-mark-white.svg')}
+			.t-project &{@include image('asigma-logo-mark.svg')}
 		}
 	}
 }
@@ -725,14 +731,19 @@ a{color:inherit}
 .c-tint{position: absolute; top:0; left: percentage(1/6); width: percentage(5/6); z-index:0; height: 100%; @include prefix((transform-origin:0% 50%)); @extend %c-tint;
 	.boot &{@include scaleInLeft; @include anim}
 	&.s--single{background-color:#fff}
+	@include device(sm){left: percentage(2/6); width:percentage(4/6); @include prefix((transition: left 0.5s ease));
+		.t-project &{left: 50%; width: 50%}
+	}
 	@include device(xs){display:none}
 }
 .c-partners__list{margin-bottom:3em; @extend .u-clear}
 .c-partners__logo{background-color:white; background-size:60%; background-repeat:no-repeat; background-position:center; height:100%; width: 100%; display:block; @include prefix((transition: transform 0.5s ease));
 	&:hover{@include prefix((transform: translateX(10%)))}
 }
-
-.c-author{display: inline-block;
+.c-authors{float: left; width: 50%; @extend .u-clear;
+	@include device(xs){float:none; width:auto}
+}
+.c-author{width: 50%; float: left; margin-bottom:1.5em;
 	figure{width:4.5em; height: 4.5em; background-color: $blue; margin-bottom: 1em; background-size:cover; background-repeat:no-repeat; background-position:center}
 	span{display: block}
 	@include device(xs){padding-left:0.625em; padding-bottom:1.5em;}
@@ -742,7 +753,7 @@ a{color:inherit}
 	.boot &{
 		.u-wrap{@include anim; @include fadeInLeft; @include delay(0.6)}
 	}
-	&.s--static{left: 0; position: fixed; @include anim; @include fadeInLeft;
+	&.s--static{left: 0; position: fixed; @include anim; @include fadeInLeft; background-color: #FFF;
 		&.is-animating-out{@include fadeOutLeft}
 		.o-line{display:none}
 	}
