--- a/style.scss
+++ b/style.scss
@@ -169,7 +169,7 @@ h2{font-size: 1.75em; font-family: $playfair; line-height:1.5;
 	@include device(xs){font-size:1.2em}
 }
 h3{font-size: 1.5em; font-family: $roboto; text-transform:uppercase; font-weight: 700}
-h4{font-size: 0.75em; font-family: $roboto; text-transform: uppercase; font-weight: 700; color:$blue;
+h4{font-size: 0.75em; font-family: $roboto; text-transform: uppercase; font-weight: 700;
 	.boot &{@include anim; @include fadeIn; @include delay(0.5)}
 }
 p{line-height: 1.5}
@@ -368,6 +368,9 @@ a{color:inherit}
 	}
 	.o-menu{margin:2em 0}
 	&.s--story{background-color: #fff}
+	@include device(md){width: percentage(4/6);
+		&.s--project{width: percentage(5/6)}
+	}
 	@include device(sm){width:auto;
 		.t-contact &{margin-left:percentage(1/6)}
 		&.s--project{margin-left:0; width:auto}
@@ -499,10 +502,11 @@ a{color:inherit}
 }
 .o-service{@extend .u-clear}
 .o-service__meta{width:percentage(1/3); float: left;
+	@include device(sm){float:none;}
 	@include device(xs){width:auto; float:none}
 }
 .o-service__info{width:percentage(2/3); float: right;
-	@include device(xs){width:auto; float:none}
+	@include device(sm){width:auto; float:none}
 }
 .o-service__title{display: block; color: #fff; background-color: $blue; padding:1.5em 1em; font-family: $playfair; font-size:1.2em; line-height: 1.5}
 .o-service__thumb{height:16em; background-color:#9aa9d3; position: relative; background-size:cover;
@@ -602,7 +606,7 @@ a{color:inherit}
 // }
 .c-grid__line{width: 1px; height: 100%; position: absolute; background-color: #000; z-index: 10; top: 0; opacity: 0.07; transition:background-color 0.5s ease; @include prefix((transform-origin:0% 0%));
 	.t-dark &{background-color: #6fa1ff; opacity: 0.2}
-	@include device(sm){display:none;
+	@include device(md){display:none;
 		.t-dark &{display: block}
 	}
 	@include device(xs){display:none;
@@ -735,7 +739,7 @@ a{color:inherit}
 	}
 }
 %c-tint{background-color: #f4f4ff; @include prefix((transition: background-color 0.5s ease));
-	.is-pc &{background-color: #f7f7f7}
+	.is-pc &{background-color: #edf2f9; }
 }
 .c-tint{position: absolute; top:0; left: percentage(1/6); width: percentage(5/6); z-index:0; height: 100%; @include prefix((transform-origin:0% 50%)); @extend %c-tint;
 	.boot &{@include scaleInLeft; @include anim}
