--- a/style.scss
+++ b/style.scss
@@ -748,7 +748,7 @@ a{color:inherit}
 %c-tint{background-color: #f4f4ff; @include prefix((transition: background-color 0.5s ease));
 	.is-pc &{background-color: #edf2f9; }
 }
-.c-tint{position: fixed; top:0; left: percentage(1/6); width: percentage(5/6); z-index:0; height: 100%; @include prefix((transform-origin:0% 50%)); @extend %c-tint;
+.c-tint{position: fixed; top:0; left: percentage(1/6); width: percentage(5/6); z-index:0; height: 100%; @include prefix((transform-origin:0% 50%)); @extend %c-tint; overflow-y: scroll; -webkit-overflow-scrolling: touch;
 	.boot &{@include scaleInLeft; @include anim}
 	&.s--single{background-color:#fff}
 	@include device(sm){left: percentage(2/6); width:percentage(4/6); @include prefix((transition: left 0.5s ease));
