--- a/style.scss
+++ b/style.scss
@@ -910,7 +910,7 @@ a{color:inherit}
 }
 .c-standfirst{padding-bottom:2.5em;
 	h4{color:#575b64; padding-left: 1.8em; padding-bottom:2em}
-	.o-list{padding:0 2em 2em; font-family:'Georgia', serif; font-style:italic;
+	.o-list{padding:0 2em 2em; font-family:'Georgia', serif; font-style:italic; position: relative; top:-1.5em;
 		li{padding-bottom:0.2em; color: #575b64}
 	}
 	.o-line{background-color:#cfcfcf}
