--- a/style.scss
+++ b/style.scss
@@ -628,7 +628,7 @@ a{color:inherit}
 }
 .c-line-2{z-index: 20}
 .c-next{background-color:#e8e8e8; padding: 3em 0 5em; margin-top: 6em; padding-right:percentage(1/3); position: relative;
-	h2{color: $blue; width:percentage(3/4)}
+	h2{color: $blue; width:80%}
 	.o-pager{position: absolute; top: 35%; right: 20px}
 	&.s--footer{margin-left:percentage(1/6); width:percentage(4/6); margin:0 auto; padding-right:0;
 		.o-pager{top:40%}
@@ -660,9 +660,9 @@ a{color:inherit}
 	.boot &{@include anim; @include fadeIn; @include delay(1.5)}
 	h1{color: $blue; padding:0.3em 0.3em 1em}
 	h2{font-size:1.3em; padding:0em 0.4em 1em; color:#8b8055;}
-	h3{font-size:0.875em; padding:2em 0.625em 1em; }
+	h3{font-size:0.875em; padding:0 0.625em 1em}
 	li{padding-bottom: 0.625em; line-height:1.7; /*font-family: 'Georgia', serif; font-style: italic*/}
-	ul,ol{padding:0 2.5em 1.5em; font-size:0.95em; position: relative; top:-1em;
+	ul,ol{padding:0 2.5em 1.5em; font-size:0.95em; position: relative;
 		>ul,ol{padding:0; line-height:1; font-size:1em; position:static}
 	}
 	ul{list-style: circle outside}
